Add authors and reviewers

--- a/src/content/en/2019/a11y.md
+++ b/src/content/en/2019/a11y.md
@@ -2,8 +2,8 @@
 part_number: II
 chapter_number: 9
 title: Accessibility
-authors: []
-reviewers: []
+authors: [nektar, obto, kleinab]
+reviewers: [ljme]
 ---
 
 # Chapter 9: Accessibility
