Contributors config and design (#252)
* Transform excel file to json

* Include public data from Github

* Plural for team name

* Building and styling /contributors

* Update contributors.html

* Update 2019.json

* Update contributors.html

* Update contributors.html

* Update contributors.html

* Update 2019.json

* CSS magic

* Small fix

* Better alt and title

* update authors and reviewers

* rename blog to website

* rviscomi twitter

--- a/src/content/en/2019/a11y.md
+++ b/src/content/en/2019/a11y.md
@@ -2,7 +2,7 @@
 part_number: II
 chapter_number: 9
 title: Accessibility
-authors: [nektar, obto, kleinab]
+authors: [nektarios-paisios, obto, kleinab]
 reviewers: [ljme]
 ---
 
